--- a/config/config-single-client-dev.yml
+++ b/config/config-single-client-dev.yml
@@ -1,6 +1,6 @@
 
 data:
-  env: localhost-dev-edit888
+  env: dev
   user:
-    username: fengzheng-dev999
-    password: password-dev
+    username: lihaibing
+    password: 123456
